[#2169] Solved mailto gramma display in wrong position for global notification

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -259,7 +259,7 @@ a.bluelink{
   margin-left: 29px;
 }
 
-#newfeature-background a{
+#newfeature-background .newFeature-title a{
   float:right;
   margin-top: -29px;
 }
